<resources>
    <string name="app_name">MoodMate</string>

    <string name="login_title">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="button_login">Log In</string>
    <string name="link_register">Don\'t have an account? Register here.</string>
    <string name="register_title">Sign Up</string>
    <string name="register_username_hint">Username</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_submit_button">Submit</string>
    <string name="link_login">Already have an account? Login</string>
    <string name="biometric_login_desc">Quick login using Fingerprint or Face ID</string>

    <string name="button_log_mood">Log Mood</string>
    <string name="button_calendar_view">Calendar View</string>
    <string name="button_mood_trends">Mood Trends</string>
    <string name="button_settings">Settings</string>

    <string name="log_mood_prompt">How are you feeling today?</string>
    <string name="log_mood_note_hint">Add Note</string>
    <string name="log_mood_add_photo">Add Photo</string>
    <string name="log_mood_submit_button">Submit</string>

    <string name="mood_excited">Excited</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_neutral">Neutral</string>
    <string name="mood_sad">Sad</string>
    <string name="mood_angry">Angry</string>

    <string name="calendar_subtitle">Your Moods for the Month!</string>
    <string name="current_month_placeholder">October 2025 ▼</string>

    <string name="trends_subtitle">Your Mood Trends this Month</string>
    <string name="week_1_label">Week 1</string>
    <string name="week_2_label">Week 2</string>
    <string name="week_3_label">Week 3</string>
    <string name="week_4_label">Week 4</string>
    <string name="log_mood_photo_url_hint">Paste Public Photo URL Here (Optional)</string>

    <string name="setting_title_language">Select Language</string>
    <string name="language_english">English (en)</string>
    <string name="language_zulu">Zulu (zu)</string>
    <string name="language_afrikaans">Afrikaans (af)</string>
</resources>