<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_moodmate_logo"
        android:contentDescription="@string/app_name" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/app_name"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_buttons"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <Button
        android:id="@+id/button_log_mood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_log_mood" android:textColor="@android:color/white"
        android:background="@drawable/black_rounded_button"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="@+id/guideline_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_calendar_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_calendar_view" android:textColor="@android:color/white"
        android:background="@drawable/black_rounded_button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button_log_mood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_mood_trends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_mood_trends" android:textColor="@android:color/white"
        android:background="@drawable/black_rounded_button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button_calendar_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_settings" android:textColor="@android:color/white"
        android:background="@drawable/black_rounded_button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button_mood_trends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>