<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_moodmate_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"  android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_icon" />

    <TextView
        android:id="@+id/label_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Choose Theme"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_settings" />

    <RadioGroup
        android:id="@+id/radio_group_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_theme">

        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Light Mode" />

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Dark Mode" />
    </RadioGroup>

    <TextView
        android:id="@+id/label_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/setting_title_language"  android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_theme" />

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_language">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_english" /> <RadioButton
        android:id="@+id/radioZulu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_zulu" /> </RadioGroup>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/black_rounded_button"
        android:text="Logout" android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/radioGroupLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>